<resources>
    <!-- IMC texts -->
    <string name="app_name">AndroidFirst</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Tu resultado</string>
    <string name="recalcular">Volver a calcular</string>
    <string name="inferior">Inferior al normal</string>
    <string name="descinferior">El peso se considera inferior al normal</string>
    <string name="normal">Normal</string>
    <string name="descnormal">El peso se considera normal</string>
    <string name="superior">Superior al normal</string>
    <string name="descsuperior">El peso se considera superior al normal</string>
    <string name="obesidad">Obesidad</string>
    <string name="descobesidad">El peso se considera como obesidad</string>
    <string name="error">Error</string>

    <!-- lista texts -->
    <string name="listatitulo">Lista de tareas</string>
    <string name="listaCategorias">Categorias</string>
    <string name="listatareas">Tareas</string>
    <string name="business">Negocios</string>
    <string name="other">Otros</string>
    <string name="personal">Personal</string>
    <string name="dialogHint">Agrega tarea</string>
    <string name="dialogButton">Crear tarea</string>


</resources>